[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
reqwest =  { version = "0.11.6", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.155", features = ["derive"]}
uuid = { version = "1.3.0", features = ["v4"] }
chrono = "0.4.15"
config = "0.13.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1"
once_cell = "1.9.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
fake = "2.5.0"
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
base64 = "0.13"
sha3 = "0.10.6"



[dev-dependencies]
tokio = { version = "1.26.0", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1.0.94"
linkify = "0.9.0"


[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]
